Migrated backend to Supabase client to fix Render network issues

--- a/.env.example
+++ b/.env.example
@@ -16,12 +16,13 @@ PORT=3000
 # Supabase Configuration (Required - Get from Supabase Dashboard)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-
 # Backend API Configuration (Required)
-# Local development
-NEXT_PUBLIC_API_URL=http://localhost:8000
-# Production (update after backend deployment)
-# NEXT_PUBLIC_API_URL=https://your-backend-service.onrender.com
+# This should point to your FastAPI backend URL
+NEXT_PUBLIC_API_URL=https://your-backend-service.onrender.com
+
+# Optional: Analytics and Error Tracking
+# NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+# SENTRY_DSN=https://your-sentry-dsn
 
 # =============================================================================
 # BACKEND ENVIRONMENT VARIABLES (FastAPI)
@@ -34,21 +35,11 @@ PORT=8000
 HOST=0.0.0.0
 ENVIRONMENT=development
 
-# Database Configuration (Required - Get from Supabase Dashboard)
-# Local development example
-DATABASE_URL=postgresql://postgres:your_password@localhost:5432/ltts_db
-# Production (get from Supabase project settings)
-# DATABASE_URL=postgresql://postgres:your_password@db.your_project_id.supabase.co:5432/postgres
-
-# Supabase Configuration (Required)
+# Supabase Configuration (Required - No DATABASE_URL needed anymore)
+# Get these from your Supabase project dashboard
 SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key_here
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
-
-# JWT Configuration (Required - Generate strong keys)
-JWT_SECRET_KEY=your_super_secret_jwt_key_at_least_256_bits_long_replace_this_with_secure_key
-JWT_ALGORITHM=HS256
-JWT_EXPIRATION_HOURS=24
 
 # CORS Configuration (Required)
 # Local development
