--- a/backend/env.example
+++ b/backend/env.example
@@ -1,4 +1,4 @@
-# =============================================================================
+  # =============================================================================
 # FastAPI Backend Environment Variables  
 # Copy this file to .env for local development
 # Add these variables to your Render dashboard for backend service deployment
@@ -9,13 +9,10 @@ PORT=8000
 HOST=0.0.0.0
 ENVIRONMENT=production
 
-# Database Configuration (Required)
-# Get the connection string from your Supabase project dashboard
-DATABASE_URL=postgresql://postgres:your_password@db.your_project_id.supabase.co:5432/postgres
-
-# Supabase Configuration (Required)
-SUPABASE_URL=https://your-project-id.supabase.co  
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# Supabase Configuration (Required - No DATABASE_URL needed)
+# Get these from your Supabase project dashboard
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key
 SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # JWT Configuration (Required)
@@ -39,6 +36,6 @@ LOG_LEVEL=INFO
 # =============================================================================
 # Development Only Variables (not needed in production)  
 # =============================================================================
-# DATABASE_URL=postgresql://postgres:password@localhost:5432/ltts_db
+# SUPABASE_URL=https://your-local-supabase-instance.supabase.co
 # CORS_ORIGINS=http://localhost:3000
 # ENVIRONMENT=development
